--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 torchaudio
 wavfile
-pytorch >=1.4
+pytorch ==1.71
 GPUtil
-python >= 3.7
+python == 3.7
+h5py==2.10
 # you also need to have ffmpeg, sox in your linux
 # standard anaconda including h5py, pandas, sklearn, scipy etc
